# performance_constraints

./: LICENSE  README  README.md  colormp.mat  grad_w.m
C++/: CMakeLists.txt  Jacobian.cpp  demo.cpp  package.xml  performanceConstraints.cpp  performanceConstraints.h
C++/include/: performanceConstraints.h
C++/include/performance_constraints/: performanceConstraints.h
C++/src/: Jacobian.cpp  Jacobian_iiwa7.cpp  Jacobian_ur5e.cpp  demo.cpp  performanceConstraints.cpp
Matlab/: grad_w.m  lwr.m  performance_constraints.m
