<package format="3">
  <name>performance_constraints</name>
  <version>0.0.0</version>
  <description>The performance_constraints package</description>

  <maintainer email="dimeasf@ece.auth.gr">Fotis</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>arl_core2</depend> <!-- Remove if you don't have this -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
